--- a/package.json
+++ b/package.json
@@ -3,30 +3,80 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "^2.11.0",
+    "@date-io/moment": "^1.3.13",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui-treasury/components": "^1.10.1",
+    "@urql/core": "^2.1.5",
+    "@urql/exchange-auth": "^0.1.3",
+    "@urql/exchange-graphcache": "^4.2.1",
+    "@urql/exchange-multipart-fetch": "^0.1.12",
+    "clsx": "^1.1.1",
+    "fetch": "^1.1.0",
+    "formik": "^2.2.9",
+    "formik-material-ui": "^3.0.1",
+    "formik-material-ui-lab": "0.0.8",
+    "formik-material-ui-pickers": "0.0.12",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "pathjoin": "0.0.4",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7",
+    "react-window-scroller": "^1.0.10",
+    "typescript": "^4.3.5",
+    "urql": "^2.0.4",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@gql2ts/from-schema": "^2.0.0-4",
+    "@playlyfe/gql": "^2.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.171",
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
+    "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-virtualized": "^9.21.12",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.4",
+    "@types/react-window-infinite-loader": "^1.0.4",
+    "@types/yup": "^0.29.13",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "@urql/introspection": "^0.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "graphql-cli": "^4.1.0",
+    "jsonfile": "^6.1.0",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.3.2"
   },
+  "bin": "bin/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "fetch-schema": "./bin/fetch-schema",
+    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx --quiet",
+    "lint:fix": "eslint src/ --ext .js,.jsx,.ts,.tsx --fix"
   },
   "browserslist": {
     "production": [
@@ -39,5 +89,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=13.3.0",
+    "npm": ">=7.0.0"
   }
 }
